--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
 body {
-    background-color: gold;
+    background-color: gold !important;
+}
+
+.container {
+    min-height: 100vh;
+    background-color: gold !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quiz-card {
+    width: 35rem;
+}
+
+.question-footer {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 12px;
+}
+
+.quiz-answer:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.disableddiv {
+    pointer-events: none !important;
+    opacity: 0.4 !important;
 }
