--- a/style.css
+++ b/style.css
@@ -31,3 +31,38 @@ body {
     pointer-events: none !important;
     opacity: 0.4 !important;
 }
+
+.end {
+    text-align: center;
+    border: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.score {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 85px;
+    margin-right: 85px;
+}
+
+.score-p {
+    color: blue;
+}
+
+.share {
+    border: none;
+    background-color: orangered;
+    padding: 15px;
+    border-radius: 24px;
+    color: white;
+}
+
+.replay {
+    border: none;
+    background-color: transparent;
+    color: orangered;
+    font-size: 800;
+}
